Bill tracker app

--- a/app/src/main/res/layout/activity_add_bill.xml
+++ b/app/src/main/res/layout/activity_add_bill.xml
@@ -85,19 +85,19 @@
 
     <Button
         android:id="@+id/clearData"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_width="120dp"
+        android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="277dp"
-        android:layout_marginRight="277dp"
-        android:layout_marginBottom="69dp"
+        android:layout_marginEnd="251dp"
+        android:layout_marginRight="251dp"
+        android:layout_marginBottom="74dp"
         android:background="@drawable/b1"
         android:text="Clear app data"
         android:textColor="#FFFFFF"
-        android:textSize="9sp"
+        android:textSize="8sp"
         android:textStyle="bold" />
 
     <Button
@@ -182,13 +182,12 @@
         android:id="@+id/remove"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="245dp"
-        android:layout_marginLeft="245dp"
-        android:layout_marginBottom="211dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginRight="27dp"
+        android:layout_marginBottom="214dp"
         android:gravity="center"
         android:text="Remove category"
         android:textColor="#7C7272"
